--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -23,8 +23,11 @@
 </head>
 <body>
     <header>
-        <nav class='navbar navbar-expand-md navbar-dark bg-dark fixed-top'>
+        <nav class='navbar navbar-expand-md navbar-light bg-light fixed-top'>
             <div class='container'>
+                <a class='navbar-brand' href="{% url 'zash-home' %}">
+                    <img src="home/static/home/images/zash-logo.png" width='30' height='30' alt="">
+                </a>
                 <a class='navbar-brand mr-4' href="{% url 'zash-home' %}">Zash</a>
                 <button class='navbar-toggler' type='button' data-toggle='collapse' data-target='#navbar-toggle' aria-controls='navbarToggle' aria-exapanded='false' aria-label='Toggle-navigation'>
                 <span class='navbar-toggler-icon'></span>
@@ -38,8 +41,9 @@
                     <div class='navbar-nav'>
                         <!-- Loop for user authentication -->
                         {% if user.is_authenticated %}
-                            <a  class='nav-item nav-link' href="{% url 'profile' %}">Profile</a>
-                            <a  class='nav-item nav-link' href="{% url 'logout' %}">Logout</a>
+                            <a class='nav-item nav-link' href="#">Dashboard</a>
+                            <a class='nav-item nav-link' href="{% url 'profile' %}">Profile</a>
+                            <a class='nav-item nav-link' href="{% url 'logout' %}">Logout</a>
                         {% else %}
                             <a class='nav-item nav-link' href="{% url 'login' %}">Login</a>
                             <a class='nav-item nav-link' href="{% url 'register' %}">Register</a>
