--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -18,6 +18,7 @@
         {{ p_form|crispy }}
       </fieldset>
       <div class='form-group'>
+        <a class='btn btn-primary' href={% url 'change_password' %}>Change Password</a>
         <button class='btn btn-outline-info' type='submit'>Update Profile</button>
       </div>
     </form>
