--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -13,6 +13,7 @@
       </div>
     </form>
     <div class='border-top pt-3'>
+      <small class='text-muted'>Can't Access Account? <a href="{% url 'password_reset' %}" class='ml-2'>Reset Password</a></small>
       <small class='text-muted'>Don't have an Account? <a href="{% url 'register' %}" class='ml-2'>Sign Up</a></small>
     </div>
   </div>
