--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -41,7 +41,7 @@
                     <div class='navbar-nav'>
                         <!-- Loop for user authentication -->
                         {% if user.is_authenticated %}
-                            <a class='nav-item nav-link' href="#">Dashboard</a>
+                            <a class='nav-item nav-link' href="{% url 'zash-dashboard' %}">Dashboard</a>
                             <a class='nav-item nav-link' href="{% url 'profile' %}">Profile</a>
                             <a class='nav-item nav-link' href="{% url 'logout' %}">Logout</a>
                         {% else %}
@@ -53,6 +53,7 @@
             </div>
         </nav>
     </header>
+    
     <main role='main' class='container'>
         <div class='row'>
             <div class='col-md-8'>
