--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -24,31 +24,26 @@
 <body>
     <header>
         <nav class='navbar navbar-expand-md navbar-light bg-light fixed-top'>
-            <div class='container'>
-                <a class='navbar-brand' href="{% url 'zash-home' %}">
-                    <img src="home/static/home/images/zash-logo.png" width='30' height='30' alt="">
-                </a>
-                <a class='navbar-brand mr-4' href="{% url 'zash-home' %}">Zash</a>
-                <button class='navbar-toggler' type='button' data-toggle='collapse' data-target='#navbar-toggle' aria-controls='navbarToggle' aria-exapanded='false' aria-label='Toggle-navigation'>
-                <span class='navbar-toggler-icon'></span>
-                </button>
-                <div class='collapse navbar-collapse' id='navbarToggle'>
-                    <div class='navbar-nav mr-auto'>
-                        <a class='nav-item nav-link' href="{% url 'zash-home' %}">Home</a>
-                        <a class='nav-item nav-link' href="#">About</a>
-                    </div>
-                    <!--Navbar Right Side -->
-                    <div class='navbar-nav'>
-                        <!-- Loop for user authentication -->
-                        {% if user.is_authenticated %}
-                            <a class='nav-item nav-link' href="{% url 'zash-dashboard' %}">Dashboard</a>
-                            <a class='nav-item nav-link' href="{% url 'profile' %}">Profile</a>
-                            <a class='nav-item nav-link' href="{% url 'logout' %}">Logout</a>
-                        {% else %}
-                            <a class='nav-item nav-link' href="{% url 'login' %}">Login</a>
-                            <a class='nav-item nav-link' href="{% url 'register' %}">Register</a>
-                        {% endif %}
-                    </div>
+            <a class='navbar-brand mr-4' href="{% url 'zash-home' %}"><img src={% static 'home/IMAGES/logo.png' %} width='30' height='30' alt="">Zash</a>
+            <button class='navbar-toggler' type='button' data-toggle='collapse' data-target='#navbar-toggle' aria-controls='navbarToggle' aria-exapanded='false' aria-label='Toggle-navigation'>
+            <span class='navbar-toggler-icon'></span>
+            </button>
+            <div class='collapse navbar-collapse' id='navbarToggle'>
+                <div class='navbar-nav mr-auto'>
+                    <a class='nav-item nav-link' href="{% url 'zash-home' %}">Home</a>
+                    <a class='nav-item nav-link' href="#">About</a>
+                </div>
+                <!--Navbar Right Side -->
+                <div class='navbar-nav'>
+                    <!-- Loop for user authentication -->
+                    {% if user.is_authenticated %}
+                        <a class='nav-item nav-link' href="{% url 'zash-dashboard' %}">Dashboard</a>
+                        <a class='nav-item nav-link' href="{% url 'profile' %}">Profile</a>
+                        <a class='nav-item nav-link' href="{% url 'logout' %}">Logout</a>
+                    {% else %}
+                        <a class='nav-item nav-link' href="{% url 'login' %}">Login</a>
+                        <a class='nav-item nav-link' href="{% url 'register' %}">Register</a>
+                    {% endif %}
                 </div>
             </div>
         </nav>
@@ -59,7 +54,7 @@
             <div class='col-md-8'>
                 {% if messages %}
                     {% for message in messages %}
-                        <div class='alert alert-{{message.tags}}'>
+                        <div class='alert alert-{{ message.tags }}'>
                             {{message}}
                         </div>
                     {% endfor %}
@@ -70,9 +65,8 @@
     </main>
 
     <!-- JAVASCRIPT -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
