--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,6 +1,37 @@
 {% extends 'home/base.html' %}
+{% load static %}
 {% block content %}
-    <article>
-        <h2>This is Home page </h2>
-    </article>    
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="{% static 'home/IMAGES/img1.jpg' %}" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="..." alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="..." alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+       
+    
+    
+    {% comment %} <div id="img-slide" class="caraousel-slide" data-ride="caraousel">
+        <div class="caraousel-inner">
+            <div class="carousel-item active">
+                {% load staticfiles %}
+                <img class="d-block w-100" src="{% static 'home/IMAGES/img1.jpg' %}" alt="" srcset="">   
+            </div>
+        
+        </div>
+    </div>     {% endcomment %}
 {% endblock content %}
