--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -7,6 +7,7 @@
             <th>Name</th>
             <th>Download</th>
             <th>Delete</th>
+            <th>Uploaded at</th>
         </thead>
         <tbody> 
             {% for file in Files %}
@@ -22,10 +23,10 @@
                             <button class='btn btn-danger btn-sm' type='submit'>Delete</button>
                         </form>
                     </td>
+                    <td>{{ file.uploaded_at }}</td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
     <a href="{% url 'upload-file' %}" class='btn btn-primary'>Upload File</a>
 {% endblock content %}
-    
